--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-dom": "19.1.0",
     "react-hook-form": "^7.61.1",
     "react-icons": "^5.5.0",
+    "react-spinners": "^0.17.0",
     "resend": "^4.7.0",
     "tailwind-merge": "^3.3.1",
     "uuid": "^11.1.0",
